add styles for links and footer socials, adjusted background image to always fill viewport

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <p>© 2024 by Matthew Malzahn | <a href="mailto:email@example.com">email@example.com</a></p>
 
       <!-- Add or remove any networks. -->
-      <ul>
+      <ul class="socials">
         <li>
           <a href="https://www.linkedin.com/in/mattjmalzahn96/"" target="_blank"><img src="images/icon-logo-linkedin.png" alt="Matthew Malzahn Linkedin Profile"></a>
         </li>
