--- a/resume.html
+++ b/resume.html
@@ -39,9 +39,9 @@
           <h3>My Project</h3>
           <p>That’s the thing about people who think they hate computers. What they really hate is lousy programmers. (Larry Niven) Measuring programming progress by lines of code is like measuring aircraft building progress by weight. (Bill Gates) It is practically impossible to teach good programming style to students that have had prior exposure to BASIC. As potential programmers, they are mentally mutilated beyond hope of regeneration. (E. W. Dijkstra) I think Microsoft named .Net so it wouldn’t show up in a Unix directory listing. (Oktal) The best thing about a boolean is even if you are wrong, you are only off by a bit. (Anonymous)</p>
           <!-- link to project -->
-          <a href="#" target="_blank">Link</a>
+          <a class="btn" href="#" target="_blank">Link</a>
           <!-- additional links, e.g. newsletter -->
-          <a href="#" target="_blank">Another link</a>
+          <a class="btn" href="#" target="_blank">Another link</a>
         </section>
         
         <!-- End content edits here. -->
@@ -93,7 +93,7 @@
       <p>© 2024 by Matthew Malzahn | <a href="mailto:email@example.com">email@example.com</a></p>
 
       <!-- Add or remove any networks. -->
-      <ul>
+      <ul class="socials">
         <li>
           <a href="https://www.linkedin.com/in/mattjmalzahn96/"" target="_blank"><img src="images/icon-logo-linkedin.png" alt="Matthew Malzahn Linkedin Profile"></a>
         </li>
