--- a/resume.html
+++ b/resume.html
@@ -9,14 +9,13 @@
   <body class="resume">
     <!-- //  INTRO  // -->
     <header>
-      <!-- Start content edits below this line. -->
-      <h1>Matthew Malzahn</h1>
-      <h2>Software Engineer</h2>
-
-      <!-- End content edits here. -->
+      <div class="content-wrapper">
+        <h1>Matthew Malzahn</h1>
+        <h2>Software Engineer</h2>
+      </div>
     </header>
 
-    <main>
+    <main class="content-wrapper">
       <!-- //  PROFILE  // -->
       <section>
         <!-- Start content edits below this line. -->
