--- a/resume.html
+++ b/resume.html
@@ -17,7 +17,7 @@
 
     <main class="content-wrapper">
       <!-- //  PROFILE  // -->
-      <section>
+      <section class="resume-section">
         <!-- Start content edits below this line. -->
         <h2>Profile</h2>
         <p>Add your resume summary/profile here. Add more paragraphs or links as needed.</p>
@@ -27,16 +27,16 @@
       </section>
 
       <!-- //  PROJECTS  // -->
-      <section>
+      <section class="resume-section">
         <!-- Start content edits below this line. -->
         <h2>Projects</h2>
         <p>Optional paragraph for the Projects summary. Delete if not being used.</p>
 
         <!-- To add more items, copy this whole <section></section> block-->
-        <section>
+        <section class="project-item">
           <img src="images/project-website-500px.jpg" srcset="images/project-website-1000px.png 2x" alt="Project Website by Matthew Malzahn" width="" height="">
           <h3>My Project</h3>
-          <p>That’s the thing about people who think they hate computers. What they really hate is lousy programmers. (Larry Niven) Measuring programming progress by lines of code is like measuring aircraft building progress by weight. (Bill Gates) It is practically impossible to teach good programming style to students that have had prior exposure to BASIC. As potential programmers, they are mentally mutilated beyond hope of regeneration. (E. W. Dijkstra) I think Microsoft named .Net so it wouldn’t show up in a Unix directory listing. (Oktal) The best thing about a boolean is even if you are wrong, you are only off by a bit. (Anonymous)</p>
+          <p>That’s the thing about people who think they hate computers. What they really hate is lousy programmers. (Larry Niven) Measuring programming progress by lines of code is like measuring aircraft building progress by weight. (Bill Gates) It is practically impossible to teach good programming style to students that have had prior exposure to BASIC. As potential programmers, they are mentally mutilated beyond hope of regeneration. (E. W. Dijkstra) I think Microsoft named .Net so it wouldn’t show up in a Unix directory listing.</p>
           <!-- link to project -->
           <a class="btn" href="#" target="_blank">Link</a>
           <!-- additional links, e.g. newsletter -->
@@ -47,7 +47,7 @@
       </section>
 
       <!-- //  WORK EXPERIENCE  // -->
-      <section>
+      <section class="resume-section">
         <!-- Start content edits below this line.  -->
         <h2>Work Experience</h2>
         <p>Optional paragraph for work experience summary. Not a part of the job details. Delete if not being used.</p>
@@ -60,7 +60,6 @@
           <p>Job summary goes here. Add as many paragraphs as you need.</p>
           <p>Optional list:</p>
           <ul>
-            <li>Delete this list if you don't need it.</li>
             <li>Created...</li>
             <li>Lead...</li>
             <li>Responsible for...</li>
@@ -71,15 +70,14 @@
       </section>
 
       <!-- //  EDUCATION & CERTIFICATIONS  // -->
-      <section>
+      <section class="resume-section">
         <!-- Start content edits below this line.  -->
         <h2>Education</h2>
 
         <!-- To add more items, copy this whole <section></section> block -->
         <section>
-          <h3>School name - City</h3>
-          <p>Designation received or program name, year attended</p>
-          <p>Summary or accomplishments.</p>
+          <h3>University of North Carolina Greensboro - Greensboro, NC</h3>
+          <p>BS in Computer Science, 2020</p>
         </section>
 
         <!-- End content edits here. -->
