--- a/resume.html
+++ b/resume.html
@@ -54,17 +54,23 @@
         <p>Optional paragraph for work experience summary. Not a part of the job details. Delete if not being used.</p>
 
         <!-- To add more items, copy this whole <section></section> block -->
-        <section>
-          <h3>Software Engineer</h3>
-          <p>Invenco by GVR</p>
-          <p>August 2021 - August 2024</p>
-          <p>Job summary goes here. Add as many paragraphs as you need.</p>
-          <p>Optional list:</p>
-          <ul>
-            <li>Created...</li>
-            <li>Lead...</li>
-            <li>Responsible for...</li>
-          </ul>
+        <section class="work-item">
+          <div class="work-details">
+            <h3>Software Engineer</h3>
+            <p>Invenco by GVR</p>
+            <p>August 2021 - August 2024</p>
+          </div>
+
+          <div class="work-summary">
+            <p>Job summary goes here. Add as many paragraphs as you need.</p>
+            <p>Optional list:</p>
+            <ul>
+              <li>Created...</li>
+              <li>Lead...</li>
+              <li>Responsible for...</li>
+            </ul>
+          </div>
+
         </section>
 
         <!-- End content edits here. -->
