decorate buttons and adjust margins for education and project sections; removed some words.

--- a/resume.html
+++ b/resume.html
@@ -34,7 +34,6 @@
       <section class="resume-section">
         <!-- Start content edits below this line. -->
         <h2>Projects</h2>
-        <p>Optional paragraph for the Projects summary. Delete if not being used.</p>
 
         <!-- To add more items, copy this whole <section></section> block-->
         <section class="project-item">
@@ -54,7 +53,10 @@
       <section class="resume-section">
         <!-- Start content edits below this line.  -->
         <h2>Work Experience</h2>
-        <p>Optional paragraph for work experience summary. Not a part of the job details. Delete if not being used.</p>
+        <p>Accomplished Software Engineer with deep expertise in C# and C++ development, specializing in building
+          scalable, maintainable software solutions. Proven track record in optimizing performance, refactoring complex
+          systems, and enhancing user interfaces using ASP.NET Core and Blazor. Skilled in mentoring developers, driving
+          cross-functional collaboration, and delivering robust, future-proof applications</p>
 
         <!-- To add more items, copy this whole <section></section> block -->
         <section class="work-item">
@@ -85,7 +87,7 @@
         <h2>Education</h2>
 
         <!-- To add more items, copy this whole <section></section> block -->
-        <section>
+        <section class="education-item">
           <h3>University of North Carolina Greensboro - Greensboro, NC</h3>
           <p>BS in Computer Science, 2020</p>
         </section>
