added media queries for responsive layout. added a project wrapper for the project items. removed profile section.

--- a/resume.html
+++ b/resume.html
@@ -36,15 +36,27 @@
         <h2>Projects</h2>
 
         <!-- To add more items, copy this whole <section></section> block-->
-        <section class="project-item">
-          <img src="images/project-website-500px.jpg" srcset="images/project-website-1000px.png 2x" alt="Project Website by Matthew Malzahn" width="" height="">
-          <h3>My Project</h3>
-          <p>That’s the thing about people who think they hate computers. What they really hate is lousy programmers. (Larry Niven) Measuring programming progress by lines of code is like measuring aircraft building progress by weight. (Bill Gates) It is practically impossible to teach good programming style to students that have had prior exposure to BASIC. As potential programmers, they are mentally mutilated beyond hope of regeneration. (E. W. Dijkstra) I think Microsoft named .Net so it wouldn’t show up in a Unix directory listing.</p>
-          <!-- link to project -->
-          <a class="btn" href="#" target="_blank">Link</a>
-          <!-- additional links, e.g. newsletter -->
-          <a class="btn" href="#" target="_blank">Another link</a>
-        </section>
+        <div class="project-wrapper">
+          <section class="project-item">
+            <img src="images/project-website-500px.jpg" srcset="images/project-website-1000px.png 2x" alt="Project Website by Matthew Malzahn" width="" height="">
+            <h3>My Project</h3>
+            <p>That’s the thing about people who think they hate computers. What they really hate is lousy programmers. (Larry Niven) Measuring programming progress by lines of code is like measuring aircraft building progress by weight. (Bill Gates)</p>
+            <!-- link to project -->
+            <a class="btn" href="#" target="_blank">Link</a>
+            <!-- additional links, e.g. newsletter -->
+            <a class="btn" href="#" target="_blank">Another link</a>
+          </section>
+          <section class="project-item">
+            <img src="images/project-website-500px.jpg" srcset="images/project-website-1000px.png 2x" alt="Project Website by Matthew Malzahn" width="" height="">
+            <h3>My Project</h3>
+            <p>That’s the thing about people who think they hate computers. What they really hate is lousy programmers. (Larry Niven) Measuring programming progress by lines of code is like measuring aircraft building progress by weight. (Bill Gates)</p>
+            <!-- link to project -->
+            <a class="btn" href="#" target="_blank">Link</a>
+            <!-- additional links, e.g. newsletter -->
+            <a class="btn" href="#" target="_blank">Another link</a>
+          </section>
+        </div>
+
         
         <!-- End content edits here. -->
       </section>
